--- a/_posts/2011-03-05-saddles.md
+++ b/_posts/2011-03-05-saddles.md
@@ -5,7 +5,7 @@ date: '2011-03-05T13:59:55-08:00'
 author: Kimberly
 layout: post
 guid: 'http://sunlandranch.com/?p=350'
-permalink: /saddles/
+permalink: /saddles2/
 sfw_comment_form_password:
     - YguUVUG2F9dk
 lacandsnw_postmessage:
